--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         </plugins>
     </build>
 
+
     <repositories>
         <repository>
             <id>jitpack.io</id>
@@ -36,6 +37,12 @@
         <dependency> <groupId>com.github.mraad</groupId>
             <artifactId>Shapefile</artifactId>
             <version>master</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
         </dependency>
     </dependencies>
 
